tests/fixtures/invalid/divmod_none_set.py
# Cannot call divmod() with None, Set[int]
x = divmod(None, {1, 2, 3})
